tests/array_type_const_expr_bad_nonconst.sl
// Verifies array type const expression bad nonconst.
fn main() {
	var n i32 = 4
	var a [i32 n]
	_ = a
}
